--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -73,7 +73,7 @@
           <li><a href="/" class="publink">Home</a></li>
           <li><a href="/about" class="publink">About</a></li>
           <li><a href="/pioneers" class="publink">Pioneers</a></li>
-          <li><a href="/about/team" class="publink">Team Claco</a></li>
+          <li><a href="/explore" class="publink">Explore</a></li>
 
           <li class="dropdown">
 
