--- a/app/assets/stylesheets/home/public.css.erb
+++ b/app/assets/stylesheets/home/public.css.erb
@@ -57,7 +57,7 @@
 
 .splashback .sectright .spotlight_feed {
   margin:45px 0 0 0;
-  height:325px;
+  height:345px;
   background: rgba(255, 255, 255, 0.9);
 
   -webkit-border-radius: 4px;
@@ -262,18 +262,17 @@
   padding:20px;
 }
 
+center .press-link {
+  vertical-align: bottom;
+  font-weight: bold;
+  text-decoration: none;
+}
+
 .seenon img {
   margin-right:20px;
   opacity: 0.8;
     filter: alpha(opacity=80);
 }
-
-
-
-
-
-
-
 
 
 .tagline {
