Sign up to apply fp btn text
Signed-off-by: Albert Pai <iamalbertpai@gmail.com>

--- a/app/views/home/_public.html.erb
+++ b/app/views/home/_public.html.erb
@@ -14,7 +14,7 @@
 
 			<div class="addtl">
 				<!-- Find, build and share resources with teachers across the hall or across the world — aligned with <%= render 'layouts/commoncorelogo' %> -->
-				<a href="/apply" id="apply-btn" class="btn">Sign up for our Beta!</a>
+				<a href="/apply" id="apply-btn" class="btn">Apply for our Beta!</a>
 				<span class='separator'>&nbsp;</span>		
 				<div class="action-items">
 					<p>Know a great educator?</p>
