semi-finished teacher analytics

--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -11,4 +11,5 @@
 <a href="/admin/pioneer">Pick Pioneerchat Binder</a><br />
 <a href="/admin/explore">Manage Explore Page</a><br />
 <a href="/admin/updatethumbnails">Manually override folder thumbnails</a><br />
-<a href="/admin/analytics">Analytics</a>
+<a href="/admin/analytics">Log Entry Analytics</a><br />
+<a href="/admin/teacheranalytics">Teacher Analytics</a>
