fp press link fix
Signed-off-by: Albert Pai <iamalbertpai@gmail.com>

--- a/app/assets/stylesheets/home/public.css.erb
+++ b/app/assets/stylesheets/home/public.css.erb
@@ -262,7 +262,7 @@
   padding:20px;
 }
 
-center .press-link {
+.container .press-link {
   vertical-align: bottom;
   font-weight: bold;
   text-decoration: none;
