--- a/app/views/home/educators.html.erb
+++ b/app/views/home/educators.html.erb
@@ -9,89 +9,118 @@
 		Educators recommended for you
 	</div>
 
+	<% #debugger %>
+
+	<% cache("recommendations/#{current_teacher.id.to_s}", :expires_in => 30.minutes) do %>
+
+		<% @recommends.each do |rec| %>
+
+			<div class="listitem">
+				<a href="/<%= rec.username %>">
+					<img src="<%= teacher_thumb_md(rec) %>" class="thumbster">
+				</a>
+				<div class="infowrap">
+					<div class="bigtitle">
+						<a href="/<%= rec.username %>"><%= "#{rec.fname} #{rec.lname}" %></a> <a href="/<%= rec.username %>"><span class="uname">(<%= rec.username %>)</span></a>
+					</div>
+					<div class="biotxt">
+						<%= rec.info.bio %>
+					</div>
+					<div class="medata">
+						<% if rec.info.subjects.any? %>
+						<span>
+							<%= image_tag("profile/subject.png") %>
+							<%= "#{rec.info.subjects[0]}#{", #{rec.info.subjects[1]}" if rec.info.subjects.size > 1}#{", and #{rec.info.subjects.size-2} more" if rec.info.subjects.size > 2}" %>
+						</span>
+						&nbsp;&nbsp;
+						<% end %>
+						<% if !rec.info.city.empty? || !rec.info.state.empty? || !rec.info.country.empty? %>
+						<span>
+							<%= image_tag("profile/point.png", :style => "margin-right:0px") %>
+							<%= "#{rec.info.city}#{', ' if !rec.info.city.empty?}#{rec.info.state}#{', ' if !rec.info.city.empty? || !rec.info.state.empty?}#{rec.info.country}" %>
+						</span>
+						<% end %>
+					</div>
+				</div>
+				<div class="actarea">
+					<% if current_teacher.id.to_s!=rec.id.to_s %>
+						<% if !current_teacher.subscribed_to?(rec.id) %>
+						<a class="btn btn-medium subbtn pull-right" style="font-weight:bolder">
+							<%= image_tag("profile/darkscribe.png", :style => "float:left;height:12px;margin:3px 5px 0 0") %>
+							Subscribe
+						</a>
+						<% end %>
+					<% end %>
+				</div>
+				<div style="clear:both"></div>
+			</div>
+
+		<% end %>
+
+	<% end %>
+
 	<% if false %>
 
-	<div class="listitem">
-		<a href="/kleinerin">
-			<img src="http://img.cla.co/30196e0ca58be4c89f26fcbf608262fb/thumb_md.png" class="thumbster">
-		</a>
-		<div class="infowrap">
-			<div class="bigtitle">
-				<a href="/kleinerin">Erin Klein</a> <a href="/kleinerin"><span class="uname">(kleinerin)</span></a>
-			</div>
-			<div class="biotxt">
-				I have my Master's of Education in Curriculum and Instruction and teach second grade. I've taught first, sixth, and seventh grade.
+		<% current_teacher.recommends.each do |f| %>
 
-				I'm the technology co-chairperson for the Michigan Reading Association, a national A Plus Workshop Presenter, SMART Technologies Exemplary Educator, Really Good Stuff Monthly Blogger, Edutopia Guest Blogger, National Writing Project member, Teaching Blog Addict Business Manager and award-winning EduTech Blogger.
-			</div>
-			<div class="medata">
-			</div>
-		</div>
+			<% cache("#{f.to_s}educobj", :expires_in => 10.minutes) do %>
 
-		<div style="clear:both"></div>
-	</div>
+			<% 
+				begin
+					rec = Teacher.find(f.to_s) 
+				rescue
+					next
+				end
 
-	<% end %>
+			%>
 
-
-	<% current_teacher.recommends.each do |f| %>
-
-	<% cache("#{f.to_s}educobj", :expires_in => 10.minutes) do %>
-
-	<% 
-		begin
-			@rec = Teacher.find(f.to_s) 
-		rescue
-			next
-		end
-
-	%>
-
-	<div class="listitem">
-		<a href="/<%= @rec.username %>">
-			<img src="<%= teacher_thumb_md(@rec) %>" class="thumbster">
-		</a>
-		<!-- <a id="subbtn" class="btn btn-small pull-right btn-primary actbtn">
-            <img alt="Whitescribe" src="http://static2.claco.com/assets/profile/whitescribe-0a51f39d0d72b8462f56aa1ba0fdc120.png" style="float:left;height:8px;margin:3px 5px 0 0">
-            <span class="upme">Subscribe</span>
-          </a> -->
-		<div class="infowrap">
-			<div class="bigtitle">
-				<a href="/<%= @rec.username %>"><%= "#{@rec.fname} #{@rec.lname}" %></a> <a href="/<%= @rec.username %>"><span class="uname">(<%= @rec.username %>)</span></a>
-			</div>
-			<div class="biotxt">
-				<%= @rec.info.bio %>
-			</div>
-			<div class="medata">
-				<% if @rec.info.subjects.any? %>
-				<span>
-					<%= image_tag("profile/subject.png") %>
-					<%= "#{@rec.info.subjects[0]}#{", #{@rec.info.subjects[1]}" if @rec.info.subjects.size > 1}#{", and #{@rec.info.subjects.size-2} more" if @rec.info.subjects.size > 2}" %>
-				</span>
-				&nbsp;&nbsp;
-				<% end %>
-				<% if !@rec.info.city.empty? || !@rec.info.state.empty? || !@rec.info.country.empty? %>
-				<span>
-					<%= image_tag("profile/point.png", :style => "margin-right:0px") %>
-					<%= "#{@rec.info.city}#{', ' if !@rec.info.city.empty?}#{@rec.info.state}#{', ' if !@rec.info.city.empty? || !@rec.info.state.empty?}#{@rec.info.country}" %>
-				</span>
-				<% end %>
-			</div>
-		</div>
-		<div class="actarea">
-			<% if current_teacher.id.to_s!=@rec.id.to_s %>
-				<% if !current_teacher.subscribed_to?(@rec.id) %>
-				<a class="btn btn-medium subbtn pull-right" style="font-weight:bolder">
-					<%= image_tag("profile/darkscribe.png", :style => "float:left;height:12px;margin:3px 5px 0 0") %>
-					Subscribe
+			<div class="listitem">
+				<a href="/<%= rec.username %>">
+					<img src="<%= teacher_thumb_md(rec) %>" class="thumbster">
 				</a>
-				<% end %>
-			<% end %>
-		</div>
-		<div style="clear:both"></div>
-	</div>
+				<!-- <a id="subbtn" class="btn btn-small pull-right btn-primary actbtn">
+		            <img alt="Whitescribe" src="http://static2.claco.com/assets/profile/whitescribe-0a51f39d0d72b8462f56aa1ba0fdc120.png" style="float:left;height:8px;margin:3px 5px 0 0">
+		            <span class="upme">Subscribe</span>
+		          </a> -->
+				<div class="infowrap">
+					<div class="bigtitle">
+						<a href="/<%= rec.username %>"><%= "#{rec.fname} #{rec.lname}" %></a> <a href="/<%= rec.username %>"><span class="uname">(<%= rec.username %>)</span></a>
+					</div>
+					<div class="biotxt">
+						<%= rec.info.bio %>
+					</div>
+					<div class="medata">
+						<% if rec.info.subjects.any? %>
+						<span>
+							<%= image_tag("profile/subject.png") %>
+							<%= "#{rec.info.subjects[0]}#{", #{rec.info.subjects[1]}" if rec.info.subjects.size > 1}#{", and #{rec.info.subjects.size-2} more" if rec.info.subjects.size > 2}" %>
+						</span>
+						&nbsp;&nbsp;
+						<% end %>
+						<% if !rec.info.city.empty? || !rec.info.state.empty? || !rec.info.country.empty? %>
+						<span>
+							<%= image_tag("profile/point.png", :style => "margin-right:0px") %>
+							<%= "#{rec.info.city}#{', ' if !rec.info.city.empty?}#{rec.info.state}#{', ' if !rec.info.city.empty? || !rec.info.state.empty?}#{rec.info.country}" %>
+						</span>
+						<% end %>
+					</div>
+				</div>
+				<div class="actarea">
+					<% if current_teacher.id.to_s!=rec.id.to_s %>
+						<% if !current_teacher.subscribed_to?(rec.id) %>
+						<a class="btn btn-medium subbtn pull-right" style="font-weight:bolder">
+							<%= image_tag("profile/darkscribe.png", :style => "float:left;height:12px;margin:3px 5px 0 0") %>
+							Subscribe
+						</a>
+						<% end %>
+					<% end %>
+				</div>
+				<div style="clear:both"></div>
+			</div>
 
-	<% end %>
+			<% end %>
+
+		<% end %>
 
 	<% end %>
 
