--- a/app/views/layouts/feedpieces/wrappers/_createfile.html.erb
+++ b/app/views/layouts/feedpieces/wrappers/_createfile.html.erb
@@ -1,21 +1,3 @@
-<% if !@f[:array] %>
-
-	<div class="thetitle">
-		<% if @teacher_activity.nil? || (!current_teacher.nil? && current_teacher.id.to_s==@f[:owner].id.to_s) %>
-			You added a file to <a href="<%= @f[:model].parents.size==2 ? named_binder_route(Binder.find(@f[:model].parent['id'])) : named_binder_route(Binder.find(@f[:model].parents[1]['id'])) %>"><%= @f[:model].parents.size==2 ? @f[:model].parents[1]["title"] : @f[:model].parent['title'] %></a> <%= time_ago_in_words(Time.at(@f[:log]['timestamp']).to_datetime) %> ago.
-		<% else %>
-			<a href="<%= "/#{@f[:owner].username}" %>"><%= "#{@f[:owner].fname} #{@f[:owner].lname}" %></a> added a file to <a href="<%= @f[:model].parents.size==2 ? named_binder_route(Binder.find(@f[:model].parent['id'])) : named_binder_route(Binder.find(@f[:model].parents[1]['id'])) %>"><%= @f[:model].parents.size==2 ? @f[:model].parents[1]["title"] : @f[:model].parent['title'] %></a> <%= time_ago_in_words(Time.at(@f[:log]['timestamp']).to_datetime) %> ago.
-		<% end %>
-	</div>
-
-<% else %>
-
-	<div class="thetitle">
-		<% if @teacher_activity.nil? || (!current_teacher.nil? && current_teacher.id.to_s==@f[:owner].id.to_s) %>
-			You added <%= @f[:array].size %> files to <a href="<%= @f[:model].parents.size==2 ? named_binder_route(Binder.find(@f[:model].parent['id'])) : named_binder_route(Binder.find(@f[:model].parents[1]['id'])) %>"><%= @f[:model].parents.size==2 ? @f[:model].parents[1]["title"] : @f[:model].parent['title'] %></a> <%= time_ago_in_words(Time.at(@f[:log]['timestamp']).to_datetime) %> ago.
-		<% else %>
-			<a href="<%= "/#{@f[:owner].username}" %>"><%= "#{@f[:owner].fname} #{@f[:owner].lname}" %></a> added <%= @f[:array].size %> files to <a href="<%= @f[:model].parents.size==2 ? named_binder_route(Binder.find(@f[:model].parent['id'])) : named_binder_route(Binder.find(@f[:model].parents[1]['id'])) %>"><%= @f[:model].parents.size==2 ? @f[:model].parents[1]["title"] : @f[:model].parent['title'] %></a> <%= time_ago_in_words(Time.at(@f[:log]['timestamp']).to_datetime) %> ago.
-		<% end %>
-	</div>
-
-<% end %>
+<div class="thetitle">
+	<a href="<%= @wholink %>"><%= "#{@who.fname} #{@who.lname}" %></a> added <%= @howmany %> file<%= @mult ? 's' : ''%> to <a href="<%= @wherelink %>"><%= @where.title %></a> <%= @when %> ago.
+</div>
