moved js modules to vendor

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,7 +55,7 @@
 		<% if signed_in? && current_teacher.getting_started %>
 
 			<%= javascript_include_tag "gen/guiders" %>
-			<%= javascript_include_tag "gen/wizard" %>
+			<%= javascript_include_tag "home/wizard" %>
 
 		<% end %>
 		<% if params[:controller] != "home" || signed_in? %>
