--- a/app/assets/stylesheets/binders/folder.css.erb
+++ b/app/assets/stylesheets/binders/folder.css.erb
@@ -300,6 +300,7 @@
 
 #normcurs {
   cursor:text !important;
+  font-size: 13px;
 }
 
 #left-sidebar .conbox .empty-tog {
@@ -1254,6 +1255,7 @@
 }
 
 .snapbtn .texter {
+  font-size: 13px;
   min-width: 55px;
 }
 
