--- a/app/views/home/_public.html.erb
+++ b/app/views/home/_public.html.erb
@@ -14,7 +14,7 @@
 
 			<div class="addtl">
 				<!-- Find, build and share resources with teachers across the hall or across the world — aligned with <%= render 'layouts/commoncorelogo' %> -->
-				<a href="/apply" id="apply-btn" class="btn">Apply for our Beta!</a>
+				<a href="/apply" id="apply-btn" class="btn">Request an Invite!</a>
 				<span class='separator'>&nbsp;</span>		
 				<div class="action-items">
 					<p>Know a great educator?</p>
@@ -161,7 +161,7 @@
     <input maxlength="50" name="emails[]" class="invite-email" type="email" placeholder="Enter an awesome teacher's email!" value=""/>
 
     <div class="buttonbar">
-       <button class="btn btn-primary showloader" type="submit">Send Nomination!</button>
+       <button class="btn btn-primary showloader" type="submit">Send invite!</button>
        <button class="btn" type="reset" onClick="closefBox()">Cancel</button>
     </div>
 
