--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,3 +1,7 @@
+<% content_for :headcon do %>
+  <%= stylesheet_link_tag "home/nav", :media => "all" %>
+<% end %>
+
 <div class="navbar navbar-fixed-top">
   <div class="navbar-inner">
     <div class="container">
