--- a/app/views/layouts/feedpieces/wrappers/_setpub.html.erb
+++ b/app/views/layouts/feedpieces/wrappers/_setpub.html.erb
@@ -1,3 +1,3 @@
 <div class="thetitle">
-	<a href="<%= @wholink %>"><%= "#{@who.fname} #{@who.lname}" %></a> shared <%= @howmany %> resource<%= @mult ? 's' : ''%> <%= @when %> ago.
+	<a href="<%= @wholink %>"><%= "#{@who.fname} #{@who.lname}" %></a> shared <%= @howmany %> resource<%= @mult ? 's' : ''%> [[[TIMESTAMP]]] ago.
 </div>
