--- a/app/views/layouts/feedpieces/wrappers/_sub.html.erb
+++ b/app/views/layouts/feedpieces/wrappers/_sub.html.erb
@@ -1,3 +1,3 @@
 <div class="thetitle">
-	<a href="<%= @wholink %>"><%= "#{@who.fname} #{@who.lname}" %></a> subscribed to <%= @howmany %> educator<%= @mult ? 's' : ''%> <%= @when %> ago.
+	<a href="<%= @wholink %>"><%= "#{@who.fname} #{@who.lname}" %></a> subscribed to <%= @howmany %> educator<%= @mult ? 's' : ''%> [[[TIMESTAMP]]] ago.
 </div>
