Fixed event trigger.
Signed-off-by: Diwank Singh <diwank.singh@gmail.com>

--- a/app/assets/javascripts/application.js.erb
+++ b/app/assets/javascripts/application.js.erb
@@ -187,7 +187,7 @@ function selectPickFolder(fObj) {
 	var text = $(fObj).text();
 
 	var changeBinder = $.Event("changeBinder");		// custom event
-	$('div.dir').trigger(changeBinder);
+	$(fObj).parent().trigger(changeBinder);
 	
 	$(fObj).closest(".bndr").parent().parent().find('.togbar').find('.chosenTitle').html(text);
 	$(fObj).closest(".bndr").parent().parent().find('.togbar').find('.chosenOne').val(folid);
