--- a/app/views/home/bookmarklet.html.erb
+++ b/app/views/home/bookmarklet.html.erb
@@ -20,7 +20,7 @@
         <i>Choose a binder or folder to copy this to</i>
       </span>
       <div class="down-arrow"></div>
-      <input type="hidden" name="folid" class="chosenOne" value="" />
+      <input type="hidden" name="folid" class="chosenOne" id="chosenOne" value="" />
     </div>
 
     <div class="pickerpane">
