--- a/app/assets/stylesheets/teacher.css
+++ b/app/assets/stylesheets/teacher.css
@@ -425,7 +425,7 @@ a.view-all:hover {
   margin-left:-119px;
   height:48px;
   width:57px;
-  
+
   border:1px solid #eee;
 }
 
@@ -435,7 +435,7 @@ a.view-all:hover {
   margin-left:-58px;
   height:48px;
   width:57px;
-  
+
   border:1px solid #eee;
 }
 
@@ -529,8 +529,8 @@ a.view-all:hover {
 }
 
 .tog-arrow {
-   width:0px; 
-  height:0px; 
+   width:0px;
+  height:0px;
   border-left:7px solid transparent;
   border-right:7px solid transparent;
   border-top:7px solid #747474;
@@ -545,14 +545,23 @@ a.view-all:hover {
   min-width:100px !important;
 }
 
-.content-item .drop-tog .dropdown-menu li > a:hover, .dropdown-menu .active > a, .dropdown-menu .active > a:hover {
+.content-item .drop-tog .dropdown-menu li > a:hover,
+.dropdown-menu .active > a,
+.dropdown-menu .active > a:hover {
   border:1px solid #ccc;
   color:#444;
   text-shadow: 0 1px 1px #fff;
   margin:-1px;
-    background-color: #eee;
 
-  -webkit-box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);  
-    -moz-box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);  
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+  background-color: #eee;
+  background-image: -moz-linear-gradient(top, #eee, #ccc);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#eee), to(#ccc));
+  background-image: -o-linear-gradient(top, #eee, #ccc);
+  background-image: linear-gradient(to bottom, #eee, #ccc);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#eee', endColorstr='#ccc', GradientType=0);
+/*
+  -webkit-box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
+    -moz-box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);*/
 }
