--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -101,8 +101,8 @@ footer {
 }
 
 #meoptmenu .droparr {
-  width:0px; 
-  height:0px; 
+  width:0px;
+  height:0px;
   border-left:7px solid transparent;
   border-right:7px solid transparent;
   border-top:7px solid #FFFFFF;
@@ -401,8 +401,8 @@ footer {
 }
 
 .fol-picker .togbar .down-arrow {
-  width:0px; 
-  height:0px; 
+  width:0px;
+  height:0px;
   border-left:7px solid transparent;
   border-right:7px solid transparent;
   border-top:7px solid #666;
@@ -468,8 +468,8 @@ footer {
 }
 
 .fol-picker .pickerpane .bndr .dir .arrow-down {
-  width:0px; 
-  height:0px; 
+  width:0px;
+  height:0px;
   border-left:6px solid transparent;
   border-right:6px solid transparent;
   border-top:6px solid #666;
@@ -481,8 +481,8 @@ footer {
 }
 
 .fol-picker .pickerpane .bndr .dir .arrow-right {
-  width:0px; 
-  height:0px; 
+  width:0px;
+  height:0px;
   border-left:6px solid #666;
   border-top:6px solid transparent;
   border-bottom:6px solid transparent;
@@ -533,4 +533,24 @@ select:focus:required:invalid:focus {
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
      -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
           box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
+}
+
+.img-rounded {
+  border-radius: 2px;
+}
+
+input.fit {
+  max-width: 90%;
+  display: block;
+  margin: auto;
+}
+
+.block {
+  display: block;
+}
+
+/* colors */
+
+.red {
+  color: #DA0606;
 }
