--- a/app/assets/stylesheets/binders/folder.css.erb
+++ b/app/assets/stylesheets/binders/folder.css.erb
@@ -64,14 +64,14 @@
 .content-header .con-inner .crumbster .crumbs{
   margin-left:0px;
   list-style:none;
-  } 
+  }
 .content-header .con-inner .crumbster .crumbs li, .content-header .con-inner .crumbster .crumbs a{
   float:left;
   height:24px;
   line-height:24px;
   position:relative;
   font-size:11px;
-  } 
+  }
 .content-header .con-inner .crumbster .crumbs a{
   text-shadow: 0px 1px 1px #fff;
   margin-right:20px;
@@ -80,11 +80,11 @@
   color:#666;
   text-decoration:none;
   -moz-border-radius-bottomleft:4px;
-  -webkit-border-bottom-left-radius:4px; 
+  -webkit-border-bottom-left-radius:4px;
   border-bottom-left-radius:4px;
   -moz-border-radius-topleft:4px;
-  -webkit-border-top-left-radius:4px;  
-  border-top-left-radius:4px;  
+  -webkit-border-top-left-radius:4px;
+  border-top-left-radius:4px;
   }
 .content-header .con-inner .crumbster .crumbs a:after{
   content:"";
@@ -96,11 +96,11 @@
   height:0;
   border-color:transparent transparent transparent #DDDDDD;
   border-style:solid;
-  border-width:12px 0 12px 12px;    
-  } 
+  border-width:12px 0 12px 12px;
+  }
 
 
-.content-header .con-inner .crumbster .crumbs a:hover{background:#aaa; color:#fff; text-shadow: 0px 1px 1px #333;} 
+.content-header .con-inner .crumbster .crumbs a:hover{background:#aaa; color:#fff; text-shadow: 0px 1px 1px #333;}
 .content-header .con-inner .crumbster .crumbs a:hover:after{border-color:transparent transparent transparent #aaa;}
 
 .content-header .con-inner .crumbster .crumbs .current-folder a{
@@ -111,10 +111,10 @@
   color:#206FCA;
   text-decoration:underline;
   -moz-border-radius-bottomleft:0px;
-  -webkit-border-bottom-left-radius:0px; 
+  -webkit-border-bottom-left-radius:0px;
   border-bottom-left-radius:0px;
   -moz-border-radius-topleft:0px;
-  -webkit-border-top-left-radius:0px; 
+  -webkit-border-top-left-radius:0px;
   border-top-left-radius:0px;
 }
 
@@ -128,7 +128,7 @@
   height:0;
   border-color:transparent;
   border-style:solid;
-  border-width:0;  
+  border-width:0;
 }
 
 .content-header .con-inner .crumbster .crumbs .current-folder a:hover {
@@ -167,8 +167,8 @@
   background-image: linear-gradient(top, #D9E8FF, #BDD6FC);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#D9E8FF', endColorstr='#BDD6FC', GradientType=0);
 
-  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.4);  
-    -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.4);  
+  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.4);
+    -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.4);
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.4);
 }
 
@@ -241,7 +241,7 @@
 
 
 #left-sidebar {
-  margin-top:30px;
+  margin-top:15px;
   width:200px;
   float:left;
 }
@@ -284,10 +284,10 @@
 
 
   -moz-border-radius-topright:4px;
-  -webkit-border-top-right-radius:4px; 
+  -webkit-border-top-right-radius:4px;
   border-top-right-radius:4px;
   -moz-border-radius-topleft:4px;
-  -webkit-border-top-left-radius:4px;  
+  -webkit-border-top-left-radius:4px;
   border-top-left-radius:4px;
 }
 
@@ -317,10 +317,10 @@
 #left-sidebar .conbox .content-fill {
 
   -moz-border-radius-bottomright:4px;
-  -webkit-border-bottom-right-radius:4px; 
+  -webkit-border-bottom-right-radius:4px;
   border-bottom-right-radius:4px;
   -moz-border-radius-bottomleft:4px;
-  -webkit-border-bottom-left-radius:4px;  
+  -webkit-border-bottom-left-radius:4px;
   border-bottom-left-radius:4px;
 }
 
@@ -328,7 +328,11 @@
   margin:10px;
 }
 
-#left-sidebar .conbox .content-fill .tag-group .announce {
+#left-sidebar .conbox .content-fill .collab-group {
+  margin:10px;
+}
+
+#left-sidebar .conbox .content-fill .announce {
   font-weight:bolder;
   border-bottom:1px solid #999;
 
@@ -369,9 +373,9 @@
      -moz-border-radius: 4px;
           border-radius: 4px;
 
-  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2), inset 0 0 4px rgba(0, 0, 0, 0.9);  
-  -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2), inset 0 0 4px rgba(0, 0, 0, 0.9);  
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2), inset 0 0 4px rgba(0, 0, 0, 0.9); 
+  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2), inset 0 0 4px rgba(0, 0, 0, 0.9);
+  -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2), inset 0 0 4px rgba(0, 0, 0, 0.9);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2), inset 0 0 4px rgba(0, 0, 0, 0.9);
 }
 
 #left-sidebar .conbox .content-fill .share-group .ppl-name {
@@ -385,7 +389,7 @@
   clear:both;
   list-style:none;
   margin:0;
-} 
+}
 .sharelist li {
   padding: 3px 0 3px 5px;
   border-bottom:1px solid #ddd;
@@ -419,8 +423,8 @@
   background-color: #111111;
   background-image: -webkit-gradient(linear, left top, left bottom, from(#666666), to(#111111));
   background-image: -webkit-linear-gradient(top, #666666, #111111);
-  background-image: -moz-linear-gradient(top, #666666, #111111); 
-  background-image: -ms-linear-gradient(top, #666666, #111111); 
+  background-image: -moz-linear-gradient(top, #666666, #111111);
+  background-image: -ms-linear-gradient(top, #666666, #111111);
   background-image: -o-linear-gradient(top, #666666, #111111);
   background-image: linear-gradient(top, #666666, #111111);
   -moz-border-radius: 8px;
@@ -438,8 +442,8 @@
 .sharelist .delcir:hover {
   background-image: -webkit-gradient(linear, left top, left bottom, from(#999999), to(#444444));
   background-image: -webkit-linear-gradient(top, #999999, #444444);
-  background-image: -moz-linear-gradient(top, #999999, #444444); 
-  background-image: -ms-linear-gradient(top, #999999, #444444); 
+  background-image: -moz-linear-gradient(top, #999999, #444444);
+  background-image: -ms-linear-gradient(top, #999999, #444444);
   background-image: -o-linear-gradient(top, #999999, #444444);
   background-image: linear-gradient(top, #999999, #444444);
 }
@@ -452,7 +456,7 @@
   font-size:11px;
   font-style:italic;
   color:#666;
-  position:absolute; 
+  position:absolute;
   width:168px;
   margin-left:9px;
   margin-top:-9px;
@@ -502,16 +506,42 @@
           border-radius: 0px;
 }
 
+.collaborators {
+  margin: 6px 8px;
+  list-style: none;
+}
 
+.spaced-out {
+  margin: 3px;
+}
 
+.no-underline,
+.no-underline:hover {
+  text-decoration: none;
+}
 
-#addtags-btn {
-  float:right;
-  margin-top:-4px;
-  margin-right:-7px;
+small.username {
+  display: inline-block;
+}
+small.username::before {
+  content: '('
+}
+small.username::after {
+  content: ')'
+}
+
+.remove-btn {
+  display: none;
+  margin-right: 2px;
+}
+
+.collaborators li:hover .remove-btn {
+  display: inline;
+}
+
+.btn.shiny {
   font-weight:bolder;
   font-size:12px;
-  color:#333;
   padding: 3px 7px 3px 7px;
 
   background-image: -moz-linear-gradient(rgba(255,255,255,.15) 49%, rgba(0,0,0,.1) 51%, rgba(0,0,0,.15));
@@ -522,28 +552,17 @@
   background-image: linear-gradient(rgba(255,255,255,.15) 49%, rgba(0,0,0,.1) 51%, rgba(0,0,0,.15));
 
   border: 1px solid #cccccc;
-  *border: 0;
   border-color: rgba(210, 210, 210, 0.99) rgba(180, 180, 180, 0.99) rgba(159, 159, 159, 0.99);
+
 }
 
-#addtags-btn:hover,
-#addtags-btn:active,
-#addtags-btn.active,
-#addtags-btn.disabled,
-#addtags-btn[disabled] {
-  color:#333;
+.btn.shiny:hover,
+.btn.shiny:active,
+.btn.shiny.active,
+.btn.shiny.disabled,
+.btn.shiny[disabled] {
   font-weight:bolder;
   background-color: #eee;
-  *background-color: #eee;
-
-  background-image: none;
-}
-
-#addtags-btn:active,
-#addtags-btn.active {
-  color:#333;
-  font-weight:bolder;
-  background-color: #942a25 \9;
 
   background-image: none;
 }
@@ -615,7 +634,7 @@
 .tags{
   clear:both;
   list-style:none;
-  } 
+  }
 .tags li, .tags a{
   float:left;
   height:24px;
@@ -623,7 +642,7 @@
   position:relative;
   font-size:11px;
   margin-bottom:5px;
-  } 
+  }
 .tags a{
   text-shadow: 0px 1px 1px #fff;
   margin-right:30px;
@@ -633,12 +652,12 @@
   color:#666;
   text-decoration:none;
   -moz-border-radius-bottomright:4px;
-  -webkit-border-bottom-right-radius:4px; 
+  -webkit-border-bottom-right-radius:4px;
   border-bottom-right-radius:4px;
   -moz-border-radius-topright:4px;
-  -webkit-border-top-right-radius:4px;  
-  border-top-right-radius:4px;  
-  } 
+  -webkit-border-top-right-radius:4px;
+  border-top-right-radius:4px;
+  }
 .tags a:before{
   content:"";
   float:left;
@@ -649,8 +668,8 @@
   height:0;
   border-color:transparent #DDDDDD transparent transparent;
   border-style:solid;
-  border-width:12px 12px 12px 0;    
-  } 
+  border-width:12px 12px 12px 0;
+  }
 .tags a:after{
   content:"";
   position:absolute;
@@ -666,9 +685,9 @@
   -moz-box-shadow:0px 0px 2px #666;
   -webkit-box-shadow:0px 0px 2px #666;
   box-shadow:0px 0px 2px #666;
-  }   
+  }
 
-.tags a:hover{background:#aaa; color:#fff; text-shadow: 0px 1px 1px #333;} 
+.tags a:hover{background:#aaa; color:#fff; text-shadow: 0px 1px 1px #333;}
 .tags a:hover:before{border-color:transparent #aaa transparent transparent;}
 
 .tags .delcir {
@@ -689,8 +708,8 @@
   background-color: #111111;
   background-image: -webkit-gradient(linear, left top, left bottom, from(#666666), to(#111111));
   background-image: -webkit-linear-gradient(top, #666666, #111111);
-  background-image: -moz-linear-gradient(top, #666666, #111111); 
-  background-image: -ms-linear-gradient(top, #666666, #111111); 
+  background-image: -moz-linear-gradient(top, #666666, #111111);
+  background-image: -ms-linear-gradient(top, #666666, #111111);
   background-image: -o-linear-gradient(top, #666666, #111111);
   background-image: linear-gradient(top, #666666, #111111);
   -moz-border-radius: 8px;
@@ -708,8 +727,8 @@
 .tags .delcir:hover {
   background-image: -webkit-gradient(linear, left top, left bottom, from(#999999), to(#444444));
   background-image: -webkit-linear-gradient(top, #999999, #444444);
-  background-image: -moz-linear-gradient(top, #999999, #444444); 
-  background-image: -ms-linear-gradient(top, #999999, #444444); 
+  background-image: -moz-linear-gradient(top, #999999, #444444);
+  background-image: -ms-linear-gradient(top, #999999, #444444);
   background-image: -o-linear-gradient(top, #999999, #444444);
   background-image: linear-gradient(top, #999999, #444444);
 }
@@ -738,9 +757,9 @@
   background-color: #FEFE86;
 
 
-  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2), inset 0 0 50px rgba(0, 0, 0, 0.1);  
-    -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2), inset 0 0 50px rgba(0, 0, 0, 0.1);  
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2), inset 0 0 50px rgba(0, 0, 0, 0.1); 
+  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2), inset 0 0 50px rgba(0, 0, 0, 0.1);
+    -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2), inset 0 0 50px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2), inset 0 0 50px rgba(0, 0, 0, 0.1);
 
   margin-bottom:20px;
 }
@@ -775,7 +794,7 @@
 }
 
 #list-pane .content-list {
-  
+
 }
 
 #list-pane .content-list .content-item {
@@ -909,7 +928,7 @@
   margin-left:-119px;
   height:48px;
   width:57px;
-  
+
   border:1px solid #eee;
 }
 
@@ -919,7 +938,7 @@
   margin-left:-58px;
   height:48px;
   width:57px;
-  
+
   border:1px solid #eee;
 }
 
@@ -1000,9 +1019,18 @@
   margin:-1px;
     background-color: #eee;
 
-  -webkit-box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);  
-    -moz-box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);  
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+  background-color: #eee;
+  background-image: -moz-linear-gradient(top, #eee, #ccc);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#eee), to(#ccc));
+  background-image: -o-linear-gradient(top, #eee, #ccc);
+  background-image: linear-gradient(to bottom, #eee, #ccc);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#eee', endColorstr='#ccc', GradientType=0);
+/*
+  -webkit-box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
+    -moz-box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);*/
+
 }
 
 #droptog-btn {
@@ -1046,8 +1074,8 @@
 }
 
 .tog-arrow {
-   width:0px; 
-  height:0px; 
+   width:0px;
+  height:0px;
   border-left:7px solid transparent;
   border-right:7px solid transparent;
   border-top:7px solid #747474;
@@ -1119,8 +1147,8 @@
 
 .dropper-tog .tricontain .pointy{
   position:absolute;
-  width:0px; 
-  height:0px; 
+  width:0px;
+  height:0px;
   border-left:20px solid transparent;
   border-right:20px solid transparent;
   border-top:20px solid #444;
@@ -1237,7 +1265,7 @@
 .actions-float {
   -webkit-box-shadow: 0 -1px 2px rgba(0, 0, 0, 0.1);
     -moz-box-shadow: 0 -1px 2px rgba(0, 0, 0, 0.1);
-    box-shadow: 0 -1px 2px rgba(0, 0, 0, 0.1); 
+    box-shadow: 0 -1px 2px rgba(0, 0, 0, 0.1);
 }
 
 .snapbtn {
@@ -1643,7 +1671,7 @@ a.fork {
 }
 
 .ui-menu-item {
-  
+
 }
 
 .ui-autocomplete-category {
@@ -1665,7 +1693,7 @@ a.fork {
   margin-left:55px;
   overflow: hidden;
   display: inline-block;
-  position: relative; 
+  position: relative;
   vertical-align: middle;
   text-align: center;
 
