--- a/app/views/home/_loggedin.html.erb
+++ b/app/views/home/_loggedin.html.erb
@@ -21,7 +21,7 @@
 
 
 				<div class="listitem">
-					<div class="numbul">1</div> 
+					<div class="numbul">1</div>
 					<div class="linker">
 						<a id="task4" onclick="wizardFocus(4)">Subscribe to your favorite colleagues, educators and organizations</a>
 					</div>
@@ -42,7 +42,7 @@
 				</div>
 
 				<div class="listitem">
-					<div class="numbul">4</div> 
+					<div class="numbul">4</div>
 					<div class="linker">
 						<a id="task1" onclick="wizardFocus(1)">Edit your profile information</a>
 					</div>
@@ -74,21 +74,25 @@
 			<% Binder.where(:owner => current_teacher.id, "parent.id" => "0").each do |binder| %>
 			<a href="<%= named_binder_route(binder) %>">
 				<div class="bindir">
-					<div class="binder_attr">></div>
+					<div class="binder_attr">&gt;</div>
 					<div class="binder_name"><%= binder.title %></div>
 				</div>
 			</a>
 			<% end %>
 		</div>
-
 		<!-- fuck you pai; fix the shared binders -->
 		<div class="whitebox hidden" data-href="shared_binders">
-			<a href="/diwank/portfolio/hello-world/5088356bd9ade5069000002c">
-				<div class="bindir">
-					<div class="binder_attr">&gt;</div>
-					<div class="binder_name">shit works</div>
-				</div>
-			</a>
+			<% Binder.where(:"permissions.shared_id.#{current_teacher}".gte => 1).each do |binder| %>
+        <a href="<%= named_binder_route(binder) %>">
+          <div class="bindir">
+            <div class="binder_attr">&gt;</div>
+            <div class="binder_name"><%= binder.title %></div>
+          </div>
+        </a>
+      <% end %>
+      <% if Binder.where(:"permissions.shared_id.#{current_teacher}".gte => 1).count == 0 %>
+        <strong class="bindir block">No one has shared a binder with you... yet!</strong>
+      <% end %>
 		</div>
 
 <div style="height:70px;margin-left:25px">
@@ -105,7 +109,7 @@
 	<span class="inlay"><small><%= @size_percent_used.to_i %>% of <%= number_to_human_size(current_teacher.size_cap) %> used.</small></span>
 	<hr />
 	<p>Looking for Free Storage?</p>
-<!-- 	<%= @invcount %> Invites Used --><!-- 
+<!-- 	<%= @invcount %> Invites Used --><!--
 	<a href="#" style="float:right" onclick="jQuery.facebox({ ajax: '/invite' });return false">Invite Colleagues</a> -->
 	<div class="invite-btn">
 		<ul class="pager">
@@ -139,7 +143,7 @@
 			<div class="findppl">
 				<div class="boxyleft">
 
-		<% #educators = current_teacher.recommends[0..8].shuffle[0..2].map{ |f| Teacher.find(f.to_s) } 
+		<% #educators = current_teacher.recommends[0..8].shuffle[0..2].map{ |f| Teacher.find(f.to_s) }
 
 			# because I'm fucking lazy
 			educators = []
@@ -152,15 +156,15 @@
 			end
 
 		%>
-	
+
 		<% if !educators[0].nil? %>
 
 		<div class="listitem" style="margin-left:15px">
-			
+
 			<a href="/<%= educators[0].username %>">
 				<img src="<%= teacher_thumb_md(educators[0]) %>" class="thumbster" />
 			</a>
-			
+
 			<div class="infowrap">
 				<div class="bigtitle">
 					<a href="/<%= educators[0].username %>"><%= "#{educators[0].fname} #{educators[0].lname}" %></a>
@@ -184,11 +188,11 @@
 		<% if !educators[1].nil? %>
 
 		<div class="listitem mid">
-			
+
 			<a href="/<%= educators[1].username %>">
 				<img src="<%= teacher_thumb_md(educators[1]) %>" class="thumbster" />
 			</a>
-			
+
 			<div class="infowrap">
 				<div class="bigtitle">
 					<a href="/<%= educators[1].username %>"><%= "#{educators[1].fname} #{educators[1].lname}" %></a>
@@ -212,11 +216,11 @@
 		<% if !educators[2].nil? %>
 
 		<div class="listitem" style="border-right:none">
-			
+
 			<a href="/<%= educators[2].username %>">
 				<img src="<%= teacher_thumb_md(educators[2]) %>" class="thumbster" />
 			</a>
-			
+
 			<div class="infowrap">
 				<div class="bigtitle">
 					<a href="/<%= educators[2].username %>"><%= "#{educators[2].fname} #{educators[2].lname}" %></a>
@@ -239,7 +243,7 @@
 
 		<% end %>
 
-	
+
 
 <ul class="pager">
 			<li class="next">
@@ -250,14 +254,14 @@
 
 					<div class="maintxt">
 							Find colleagues &nbsp;&nbsp;&nbsp;
-						
+
 
 						<% if current_teacher.omnihash["twitter"].nil? %>
 							<a href="/gs/twitter" class="zocial twitter">Connect with Twitter</a>
 						<% end %>
-					
 
-					
+
+
 						<% if current_teacher.omnihash["facebook"].nil? %>
 							<a href="/gs/facebook" class="zocial facebook">Connect with Facebook</a>
 						<% end %>
@@ -266,12 +270,12 @@
 					</div>
 
 					<% end %>
-					
-					
+
+
 
 				</div>
 
-				
+
 				<div style="clear:both"></div>
 			</div>
 
